# Japan_vs_China_Technology

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: load_data.py  transform_data.py
